add check boxes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="main.css">
 	<link rel="stylesheet" href="grid.css">
 </head>
 <body>
@@ -19,17 +20,21 @@
     <div class="wrapper">
 
        <div id="animal-selector">
-         <label for="test1">test1</label>
          <input type="radio" name="test" id="test1">
+         <label for="test1"><i class="fa fa-check" aria-hidden="true"></i>
+</label>
 
-         <label for="test2">test2</label> 
          <input type="radio" name="test" id="test2">
+         <label for="test2"><i class="fa fa-check" aria-hidden="true"></i>
+</label> 
 
-         <label for="test3">test3</label>
-         <input type="radio" name="test" id="test3"> 
+         <input type="radio" name="test" id="test3">
+         <label for="test3"><i class="fa fa-check" aria-hidden="true"></i>
+</label> 
 
-         <label for="test4">test4</label>
          <input type="radio" name="test" id="test4">
+         <label for="test4"><i class="fa fa-check" aria-hidden="true"></i>
+</label>
        </div>
          
        <div class="row">
