--- a/index.html
+++ b/index.html
@@ -3,17 +3,30 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<script src="https://code.jquery.com/jquery-3.0.0.js"></script>
 	<link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="main.css">
 	<link rel="stylesheet" href="grid.css">
 </head>
 <body>
   <div id="slider">
-	<ul>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
+    <div class="arrow" id="up"><i class="fa fa-angle-up" aria-hidden="true"></i>
+</div>
+    <div class="arrow" id="down"><i class="fa fa-angle-down" aria-hidden="true"></i>
+</div>
+	<ul id="slides">
+		<li class="first">
+		   <span class="header-text">Slide 1</span>
+		</li>   
+		<li class="second">
+		   <span class="header-text">Slide 2</span>
+		</li>
+		<li class="third">
+		   <span class="header-text">Slide 3</span>
+		</li>
+		<li class="fourth"> 
+		   <span class="header-text">Slide 4</span>
+		</li>   
 	</ul>
   </div>
   <div id="main">
@@ -78,8 +91,21 @@
     </div> <!-- .wrapper -->
   </div><!--  #main -->
   <footer id="master-footer">
-  	
+     <div class="row">
+     	<div class="column oneThird">Tekst1</div>
+     	<div class="column oneThird">Tekst2</div>
+     	<div class="column oneThird">Tekst3</div>
+     </div>
   </footer>
+ <script>
+ 	$("#up").click(function(){
+ 		$("#slides").animate({top: "+=500px"});
+    });
+
+    $("#down").click(function(){
+ 		$("#slides").animate({top: "-=500px"});
+    });
+ </script>
 	
 </body>
 </html>
